#CTCI-  Merge Intervals